Re-training net with positions from previous nnue training session